Minor debug changes